# Projeto_computacao

./: .gitignore  CHANGELOG.md  CORRECAO_BASES.md  EXECUTION_GUIDE.md  HOW_TO_RUN.txt  INSTALL.md  MELHORIAS_IMPLEMENTADAS.md  Makefile  NOVA_FUNCIONALIDADE_ESCALA.md  PROJECT_TREE.txt  PROJETO_COMPLETO.md  QUICK_START.md  README.md  REFACTORING_PROPOSAL.md  REORGANIZATION_SUMMARY.md  RESUMO_CONTROLES_ESCALA.txt  pyproject.toml  run.bat  run.sh  run_game.py  setup.py  test_modules.py
assets/: README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CONTROLES_ESCALA.md  GUIA_APRESENTACAO.md  GUIA_COMPLETO.md  PROJECT_STRUCTURE.md  RENDERIZACAO_FACES.md  slides.md
scripts/: check_code_quality.py  run_tests.py
src/: __init__.py  game.py  main.py
src/core/: __init__.py  config.py  constants.py  exceptions.py  logger.py
src/game_logic/: __init__.py  level.py  player.py  puzzle.py
src/objects/: __init__.py  primitives.py  shape3d.py
src/rendering/: __init__.py  camera.py  lighting.py  renderer.py
src/transformations/: __init__.py  geometric.py  matrix.py
src/ui/: __init__.py  button.py  hud.py  menu.py  tutorial.py
src/utils/: __init__.py  color_utils.py  math_utils.py  time_utils.py  validators.py
tests/: __init__.py  conftest.py
tests/integration/: test_transformations.py
tests/unit/: test_color_utils.py  test_math_utils.py
